--- a/SolyankaGuide.csproj
+++ b/SolyankaGuide.csproj
@@ -2,63 +2,43 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net10.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Assets\Data\helpButtons.json" />
-    <None Remove="Assets\Images\changelog.png" />
+    <None Remove="Assets\Data\categories.json" />
+    <None Remove="Assets\Images\background.jpg" />
     <None Remove="Assets\Images\current.png" />
     <None Remove="Assets\Images\discord.png" />
-    <None Remove="Assets\Images\help.jpg" />
     <None Remove="Assets\Images\icon0.png" />
-    <None Remove="Assets\Images\ideas.png" />
     <None Remove="Assets\Images\install.png" />
     <None Remove="Assets\Images\prolog.png" />
-    <None Remove="Assets\Images\reqs.jpg" />
-    <None Remove="Assets\Images\settings.png" />
-    <None Remove="Assets\Images\solyanka.jpg" />
-    <None Remove="Assets\Images\starting.png" />
-    <None Remove="Assets\Images\story.png" />
-    <None Remove="Assets\Images\support.png" />
-    <None Remove="Assets\Images\when.png" />
     <None Remove="Assets\Images\yt.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Assets\Data\helpButtons.json" />
+    <EmbeddedResource Include="Assets\Data\quests.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Data\faq.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Data\categories.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Assets\Images\changelog.png" />
+    <Resource Include="Assets\Images\background.jpg" />
     <Resource Include="Assets\Images\current.png" />
     <Resource Include="Assets\Images\discord.png" />
-    <Resource Include="Assets\Images\help.jpg" />
     <Resource Include="Assets\Images\icon0.png" />
-    <Resource Include="Assets\Images\ideas.png" />
     <Resource Include="Assets\Images\install.png" />
     <Resource Include="Assets\Images\prolog.png" />
-    <Resource Include="Assets\Images\reqs.jpg" />
-    <Resource Include="Assets\Images\settings.png" />
-    <Resource Include="Assets\Images\solyanka.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Assets\Images\starting.png" />
-    <Resource Include="Assets\Images\story.png" />
-    <Resource Include="Assets\Images\support.png" />
-    <Resource Include="Assets\Images\when.png" />
     <Resource Include="Assets\Images\yt.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="C:\Users\caref\.nuget\packages\zstdnet\1.4.5\build\x86\libzstd.dll" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="C:\Users\caref\.nuget\packages\zstdnet\1.4.5\build\x64\libzstd.dll" />
   </ItemGroup>
 
 </Project>
